# quiltprojectgen

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.MD  README.md  SECURITY.md  compile_commands.json  main.cpp  manifest  neovim.json  quiltprojectgen.sublime-workspace  repositories.manifest
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql-analysis.yml  main.yml
quiltprojectgen/: .gitignore  Clone.cpp  Clone.hpp  buildfile  quiltprojectgen.cpp  testscript
quiltprojectgen/include/: Flags.hpp
quiltprojectgen/src/: Clone.cpp  quiltprojectgen.cpp
src/: Clone.cpp  main.cpp
